welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:4: error: reassignment to val
    if (nums(i) == 9) nb = nb+1
                         ^